Rimosso descrizione metriche

--- a/DocumentiEsterni/PianoDiQualifica/src/QualitaDiProcesso/main.tex
+++ b/DocumentiEsterni/PianoDiQualifica/src/QualitaDiProcesso/main.tex
@@ -22,7 +22,6 @@ successivamente sono stati semplificati o adattati secondo le esigenze.
             \begin{enumerate}
                 \item \textbf{PROS} (Percentuale di requisiti obbligatori soddisfatti):
                 \begin{itemize}
-                    \item $PROS = \frac{requisiti\ obbligatori\ soddisfatti}{requisiti\ obbligatori\ totali}$ ;
                     \item valore preferibile: $100\%$;
                     \item valore accettabile: $100\%$.
                 \end{itemize}
@@ -111,11 +110,7 @@ successivamente sono stati semplificati o adattati secondo le esigenze.
             \end{itemize}
         \paragraph{Metriche}
             \begin{enumerate}
-                \item \textbf{BAC} (Budget at Completion):
-                \begin{itemize}
-                    \item valore preferibile: uguale al preventivo;
-                    \item valore accettabile: preventivo $\pm 5\%$.
-                \end{itemize}
+                \item \textbf{BAC} (Budget at Completion)
                 \item \textbf{AC} (Actual Cost):
                 \begin{itemize}
                     \item valore preferibile: $0 \leq AC < PV$;
@@ -158,19 +153,16 @@ successivamente sono stati semplificati o adattati secondo le esigenze.
             \begin{enumerate}
                 \item \textbf{SC} (Statement Coverage):
                 \begin{itemize}
-                    \item $SC = \frac{numero\ di\ righe\ eseguite}{numero\ di\ righe\ totali}$;
                     \item valore preferibile: $100\%$;
                     \item valore accettabile: $\geq 80\%$.
                 \end{itemize}
                 \item \textbf{BC} (Branch Coverage):
                 \begin{itemize}
-                    \item $SC = \frac{numero\ di\ rami\ percorsi}{numero\ di\ rami\ totali}$;
                     \item valore preferibile: $100\%$;
                     \item valore accettabile: $\geq 80\%$.
                 \end{itemize}
                 \item \textbf{MCDC} (Modified Condition/Decision Coverage):
                 \begin{itemize}
-                    \item $SC = \frac{numero\ di\ decisioni\ percorse}{numero\ di\ decisioni\ totali}$;
                     \item valore preferibile: $100\%$;
                     \item valore accettabile: $\geq 80\%$.
                 \end{itemize}
@@ -197,7 +189,6 @@ successivamente sono stati semplificati o adattati secondo le esigenze.
         \begin{enumerate}
             \item \textbf{IG} (Indice di Gulpease):
             \begin{itemize}
-                \item $IG = 89+\frac{300*numero\ di\ frasi-10*numero\ di\ lettere}{numero\ di\ parole}$;
                 \item valore preferibile: $80< IG < 100$;
                 \item valore accettabile: $60< IG < 100$.
             \end{itemize}
@@ -221,7 +212,6 @@ successivamente sono stati semplificati o adattati secondo le esigenze.
         \begin{enumerate}
         \item \textbf{PMS} (Percentuale di metriche soddisfatte):
         \begin{itemize}
-            \item $PMS = \frac{numero\ di\ metriche\ soddisfatte}{numero\ di\ metriche\ totali}$;
             \item valore preferibile: $\geq 80\%$;
             \item valore accettabile: $\geq 60\%$.
         \end{itemize}
