aggiunto diagramma di gantt

--- a/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/main.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/main.tex
@@ -11,11 +11,15 @@ Nella pianificazione vengono definiti tutti i passi necessari alla conclusione d
 
 \subsection{Stadio 2 - Soddisfacimento requisiti d'ingresso}\label{sec:Stadio2}
 \input{src/Pianificazione/src/Stadio2.tex}
+
+\newpage
+\subsection{Diagramma di Gantt delle attività della fase di Analisi}\label{sec:Stadio2}
+\input{src/Pianificazione/src/GanttAnalisi.tex}
     
 \subsection{Stadio 3 - Strutturazione delle componenti}\label{sec:Stadio3}
 \input{src/Pianificazione/src/Stadio3.tex}
     
-\subsection{Stadio 4 - Concretizzazione e sviluppo}\label{sec:Stadio4}
+\subsection{Stadio 4 - Concretizzazione del \glo{proof of concept}}\label{sec:Stadio4}
 \input{src/Pianificazione/src/Stadio4.tex}
     
 \subsection{Stadio 5 - Sviluppo e rifinitura }\label{sec:Stadio5}
