--- a/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Strutturazione.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Strutturazione.tex
@@ -11,7 +11,7 @@ Qui sotto viene esposto sinteticamente lo schema generale, dove ogni stadio è c
     \item \textbf{Fase di Progettazione Architetturale}:
     \begin{itemize}
         \item Stadio 3 - Strutturazione delle componenti;
-        \item Stadio 4 - Concretizzazione e sviluppo del \glo{Proof of Concept};
+        \item Stadio 4 - Concretizzazione del \glo{Proof of Concept};
     \end{itemize}
 
     \item \textbf{Fase di Dettaglio e Codifica}:
