--- a/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Strutturazione.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Strutturazione.tex
@@ -14,13 +14,13 @@ Qui sotto viene esposto sinteticamente lo schema generale, dove ogni stadio è c
         \item Stadio 4 - Concretizzazione del \glo{Proof of Concept};
     \end{itemize}
 
-    \item \textbf{Fase di Dettaglio e Codifica}:
+    \item \textbf{Fase di Codifica}:
     \begin{itemize}  
         \item Stadio 5 - Sviluppo e rifinitura;
         \item Stadio 6 - Qualifica e testing.
     \end{itemize}
 
-    \item \textbf{Fase di Validazione e Collaudo}:
+    \item \textbf{Fase di Collaudo}:
     \begin{itemize}        
         \item Stadio 7 - Finalizzazione.
     \end{itemize}
