--- a/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/main.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/main.tex
@@ -19,7 +19,7 @@ Nella pianificazione vengono definiti tutti i passi necessari alla conclusione d
 \subsection{Stadio 3 - Strutturazione delle componenti}\label{sec:Stadio3}
 \input{src/Pianificazione/src/Stadio3.tex}
     
-\subsection{Stadio 4 - Concretizzazione del \glo{proof of concept}}\label{sec:Stadio4}
+\subsection{Stadio 4 - Concretizzazione del Proof of concept}\label{sec:Stadio4}
 \input{src/Pianificazione/src/Stadio4.tex}
     
 \subsection{Stadio 5 - Sviluppo e rifinitura }\label{sec:Stadio5}
@@ -28,5 +28,5 @@ Nella pianificazione vengono definiti tutti i passi necessari alla conclusione d
 \subsection{Stadio 6 - Qualifica e testing}\label{sec:Stadio6}
 \input{src/Pianificazione/src/Stadio6.tex}
     
-\subsection{Stadio 7 - Validazione e collaudo}\label{sec:Stadio7}
+\subsection{Stadio 7 - Finalizzazione}\label{sec:Stadio7}
 \input{src/Pianificazione/src/Stadio7.tex}
