--- a/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Strutturazione.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Strutturazione.tex
@@ -8,7 +8,7 @@ Qui sotto viene esposto sinteticamente lo schema generale, dove ogni stadio è c
         \item Stadio 2 - Soddisfacimento requisiti d'ingresso.
     \end{itemize}
 
-    \item \textbf{Fase di Progettazione Architetturale}:
+    \item \textbf{Fase di Progettazione}:
     \begin{itemize}
         \item Stadio 3 - Strutturazione delle componenti;
         \item Stadio 4 - Concretizzazione del \glo{Proof of Concept};
