--- a/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/main.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/main.tex
@@ -6,27 +6,27 @@ Nella pianificazione vengono definiti tutti i passi necessari alla conclusione d
 \subsection{Strutturazione}\label{sec:Strutturazione}
 \input{src/Pianificazione/src/Strutturazione.tex}
 
-\subsection{Stadio 1 - Organizzazione preliminare}\label{sec:Stadio1}
+\subsection{Fase di Analisi: Stadio 1 - Organizzazione preliminare}\label{sec:Stadio1}
 \input{src/Pianificazione/src/Stadio1.tex}
 
-\subsection{Stadio 2 - Soddisfacimento requisiti d'ingresso}\label{sec:Stadio2}
+\subsection{Fase di Analisi: Stadio 2 - Soddisfacimento requisiti d'ingresso}\label{sec:Stadio2}
 \input{src/Pianificazione/src/Stadio2.tex}
 
 \newpage
 \subsection{Diagramma di Gantt delle attività della fase di Analisi}\label{sec:Stadio2}
 \input{src/Pianificazione/src/GanttAnalisi.tex}
     
-\subsection{Stadio 3 - Strutturazione delle componenti}\label{sec:Stadio3}
+\subsection{Fase di Progettazione: Stadio 3 - Strutturazione delle componenti}\label{sec:Stadio3}
 \input{src/Pianificazione/src/Stadio3.tex}
     
-\subsection{Stadio 4 - Concretizzazione del Proof of concept}\label{sec:Stadio4}
+\subsection{Fase di Progettazione: Stadio 4 - Concretizzazione del Proof of concept}\label{sec:Stadio4}
 \input{src/Pianificazione/src/Stadio4.tex}
     
-\subsection{Stadio 5 - Sviluppo e rifinitura }\label{sec:Stadio5}
+\subsection{Fase di Codifica: Stadio 5 - Sviluppo e rifinitura }\label{sec:Stadio5}
 \input{src/Pianificazione/src/Stadio5.tex}
     
-\subsection{Stadio 6 - Qualifica e testing}\label{sec:Stadio6}
+\subsection{Fase di Codifica: Stadio 6 - Qualifica e testing}\label{sec:Stadio6}
 \input{src/Pianificazione/src/Stadio6.tex}
     
-\subsection{Stadio 7 - Finalizzazione}\label{sec:Stadio7}
+\subsection{Fase di Collaudo: Stadio 7 - Finalizzazione}\label{sec:Stadio7}
 \input{src/Pianificazione/src/Stadio7.tex}
