--- a/DocumentiEsterni/PianoDiProgetto/src/ConsuntivoPeriodo/src/ConsuntivoAnalisi.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/ConsuntivoPeriodo/src/ConsuntivoAnalisi.tex
@@ -19,11 +19,11 @@ La seguente tabella illustra la differenza oraria ed economica rilevata a poster
 	
 Responsabile    &  35 & 0 & 1050 & 1050 &  0 \\
 Amministratore  &  35 & 0 & 700 & 700 & 0 \\
-Analista        & 71 & 14 & 1775 & 1425 & 350 \\
+Analista        & 71 & 4 & 1775 & 1425 & 350 \\
 Progettista     &   0 &   0 &    0 &  0 & 0 \\
 Programmatore   &   0 &   0 &    0 &  0 & 0 \\
-Verificatore    &  60 &  5 & 900 &  & 75 \\
-\textbf{Totale} & 201 & 182 & 4425 & 4000 & 425 \\	
+Verificatore    &  70 &  5 & 900 &  & 75 \\
+\textbf{Totale} & 211 & 202 & 4575 & 4400 & 175 \\	
 
 \end{longtable}
 }
@@ -32,9 +32,10 @@ Verificatore    &  60 &  5 & 900 &  & 75 \\
 Come riportato dalla tabella, il bilancio risulta essere positivo per i seguenti motivi:
 \begin{itemize}
 	\item \textbf{Responsabile}: {i componenti designati a questo ruolo in questa fase a fare i responsabili non avevano esperienza è quindi le ore preventivate hanno tenuto conto di questo; }
-	\item \textbf{Amministratore}: {uno dei componenti del gruppo aveva già esperienza in merito a vari strumenti e tecnologie utilizzabili per migliorare la produttività del gruppo;}
-	\item \textbf{Analista}: {lo scostamento maggiore si è fatta una sovrastima delle ore richieste a tale compito perchè alcune attività di analisi si pensavano richiedessero più tempo;}
-	\item \textbf{Verificatore}: {lo scostamento è in linea con il preventivo all'incirca.}
+	\item \textbf{Amministratore}: {uno dei componenti del gruppo aveva già esperienza in merito a vari strumenti e tecnologie utilizzabili per migliorare la produttività del gruppo,ma è stato tenuto 
+	conto del inesperienza di alcuni componenti del team in questo ruolo;}
+	\item \textbf{Analista}: {è in linea col preventivo}
+	\item \textbf{Verificatore}: {lo scostamento è in linea con il preventivo all'incirca come quelle dell'analista che sono molto legate tra di loro in questa fase.}
 \end{itemize}
 
 \subsubsection{Ragionamento sugli scostamenti}
@@ -45,5 +46,5 @@ La suddivisione a stadi di una fase permette di migliorare la produttività del 
 \end{itemize}
 Questo fa presupporre che anche i futuri scostamenti siano abbastanza in linea con quello preventivato.
 \subsubsection{Preventivo a finire}
-Il costo effettivo di questa prima fase non ha influenza sul preventivo in quanto esso si basa solamente sui costi preventivati nelle fasi successive di Progettazione Architetturale, Progettazione di Dettaglio e Codifica, Validazione e Collaudo.\\
+Il costo effettivo di questa prima fase non ha influenza sul preventivo in quanto esso si basa solamente sui costi preventivati nelle fasi successive di Progettazione, Codifica, Collaudo.\\
 Ciò non toglie che ragionando sugli scostamenti, il gruppo deve prestare qualche attenzione in più sulla pianificazione oraria, ma nel complesso il team pianifica e lavora bene.
