--- a/DocumentiEsterni/PianoDiProgetto/src/AnalisiRischi/src/OccorrenzaRischi.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/AnalisiRischi/src/OccorrenzaRischi.tex
@@ -44,7 +44,7 @@ Di seguito viene stilata una tabella parziale, soggetta ad aggiornamenti progres
         \hline
         ROd & 
         1 & 
-        bassa &
+        media &
         In qualche caso la redazone di alcuni documenti si è protratta oltre il tempo prestabilito per ultimare gli stessi, ritardando così i tempi per la loro validazione. Fortunatamente i ritardi non sono stati eccessivi e si è riusciti ugualmente a completare i lavori entro i tempi stabiliti, senza particolari complicazioni. E' stato in ogni caso fatto presente tra i membri del gruppo.\\
         \hline
     \end{longtable}
