--- a/DocumentiEsterni/PianoDiProgetto/src/Introduzione/src/Riferimenti.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Introduzione/src/Riferimenti.tex
@@ -1,5 +1,5 @@
 \begin{itemize}
-    \item \NdP{};
+    \item \NdP{} v1.0.0;
     \item \textbf{Capitolato d'appalto C1}: \url{https://www.math.unipd.it/~tullio/IS-1/2020/Progetto/C1.pdf};
     \item \textbf{Docker Ecosystem and Tools}: \url{https://www.math.unipd.it/~tullio/IS-1/2020/Progetto/ST3.pdf};
     \item \textbf{Organigrama}: \url{https://www.math.unipd.it/~tullio/IS-1/2020/Progetto/RO.html}.
