--- a/Shared/Sweleven.sty
+++ b/Shared/Sweleven.sty
@@ -90,19 +90,19 @@
 \newcommand{\Gruppo}{Sweleven}
 
 % variabili - documenti
-% \newcommand{\VersioneDiConsegna}{4.0.0-R1}
-% \newcommand{\AdRv}{\emph{Analisi dei requisiti\_v.4.0.0-R1}}
-% \newcommand{\SdFv}{\emph{Studio di fattibilità\_v.1.0.0-0}}
-% \newcommand{\VIv}{\emph{Verbale interno\_v.4.0.0-R1}}
-% \newcommand{\NdPv}{\emph{Norme di progetto\_v.4.0.0-R1}}
-% \newcommand{\PdPv}{\emph{Piano di progetto\_v.3.0.0-INC-11}}
-% \newcommand{\PdQv}{\emph{Piano di qualifica\_v.4.0.0-R1}}
-% \newcommand{\SPv}{\emph{Specifica tecnica\_v.4.0.0-R1}}
-% \newcommand{\DdPv}{\emph{Definizione di prodotto\_v.4.0.0-R1}}
-% \newcommand{\Gv}{\emph{Glossario\_v.4.0.0-R1}}
-% \newcommand{\MUv}{\emph{Manuale utente\_v.2.0.0-R1}}
-% \newcommand{\MSv}{\emph{Manuale sviluppatore\_v.2.0.0-R1}}
-% \newcommand{\VEv}{\emph{Verbale esterno\_v.2.0.0-R1}}
+\newcommand{\VersioneDiConsegna}{4.0.0-R1}
+\newcommand{\AdRv}{\emph{Analisi dei requisiti\_v.4.0.0-R1}}
+\newcommand{\SdFv}{\emph{Studio di fattibilità\_v.1.0.0-0}}
+\newcommand{\VIv}{\emph{Verbale interno\_v.4.0.0-R1}}
+\newcommand{\NdPv}{\emph{Norme di progetto\_v.4.0.0-R1}}
+\newcommand{\PdPv}{\emph{Piano di progetto\_v.3.0.0-INC-11}}
+\newcommand{\PdQv}{\emph{Piano di qualifica\_v.4.0.0-R1}}
+\newcommand{\SPv}{\emph{Specifica tecnica\_v.4.0.0-R1}}
+\newcommand{\DdPv}{\emph{Definizione di prodotto\_v.4.0.0-R1}}
+\newcommand{\Gv}{\emph{Glossario\_v.4.0.0-R1}}
+\newcommand{\MUv}{\emph{Manuale utente\_v.2.0.0-R1}}
+\newcommand{\MSv}{\emph{Manuale sviluppatore\_v.2.0.0-R1}}
+\newcommand{\VEv}{\emph{Verbale esterno\_v.2.0.0-R1}}
 
 \newcommand{\AdR}{\emph{Analisi dei requisiti}}
 \newcommand{\SdF}{\emph{Studio di fattibilit\`{a}}}
