--- a/DocumentiInterni/NormeDiProgetto/main.tex
+++ b/DocumentiInterni/NormeDiProgetto/main.tex
@@ -33,4 +33,13 @@
 \section{Processi organizzativi}\label{sec:processi-organizzativi}
 \input{src/ProcessiOrganizzativi/main.tex}
 
+\appendix
+\newpage
+\section{Standard di qualità}\label{sec:Standard-di-qualita}
+\input{src/StandardQualita/main.tex}
+
+\newpage
+\section{Ciclo di Deming o PDCA}\label{sec:Ciclo-di-Deming}
+\input{src/CicloDeming/main.tex}
+
 \end{document}
