--- a/DocumentiEsterni/PianoDiQualifica/src/RegistroModifiche.tex
+++ b/DocumentiEsterni/PianoDiQualifica/src/RegistroModifiche.tex
@@ -13,6 +13,9 @@
         % usare \responsabile per indicare responsabile
 
         %		L'ultimo evento deve essere sempre all'inizio della tabella
+        1.0.0                   &2021-01-10                                        & Approvazione                                   &Giovanni Grigoletto & \responsabile{}\\
+        0.2.0                  & 2021-01-06                                       & Verifica documento                            &Alessio Trevisan &\verificatore{}\\
+        0.1.0                  & 2021-01-05                                       & Verifica documento                            &Filippo Pinton &\verificatore{}\\
         0.0.5                  & 2021-01-05                                       & Stesura Appendice §C                         & Abdelwahad kandoul & \redattore{} \\
         0.0.4                  & 2021-01-04                                       & Stesura Appendice §A e §B                          & Abdelwahad kandoul & \redattore{} \\
         0.0.3                  & 2021-01-03                                       & Stesura §3                            & Abdelwahad kandoul & \redattore{} \\
