--- a/DocumentiEsterni/PianoDiProgetto/src/Organigramma/main.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Organigramma/main.tex
@@ -6,8 +6,8 @@
 		\caption{Tabella di redazione}\\
 		\rowcolor{\primaryColor}
         \textcolor{\secondaryColor}{\textbf{Nome}} & \textcolor{\secondaryColor}{\textbf{Data di redazione}} & \textcolor{\secondaryColor}{\textbf{Firma}}\\ \endhead        		
-		{Elvis Murtezan} & 2021-01-04 & \includegraphics[scale=0.20]{./src/Organigramma/immagini/firme/Elvis.png}\\
-		{Giovanni Grigoletto} & 2021-01-04 & \includegraphics[scale=0.20]{./src/Organigramma/immagini/firme/giovanni.png}\\
+		{Elvis Murtezan} & 2021-01-03 & \includegraphics[scale=0.20]{./src/Organigramma/immagini/firme/Elvis.png}\\
+		{Giovanni Grigoletto} & 2021-01-03 & \includegraphics[scale=0.20]{./src/Organigramma/immagini/firme/giovanni.png}\\
 	\end{longtable}
 }
 
@@ -20,8 +20,9 @@
 		\caption{Tabella di approvazione}\\
 		\rowcolor{\primaryColor}
         \textcolor{\secondaryColor}{\textbf{Nome}} & \textcolor{\secondaryColor}{\textbf{Data di Approvazione}} & \textcolor{\secondaryColor}{\textbf{Firma}}\\	\endhead
-		{Elvis Murtezan} & 2021-01-11 & \includegraphics[scale=0.20]{./src/Organigramma/immagini/firme/Elvis.png}\\
-		{Tullio Vardanega,Cardin Riccardo} &  &   \\
+		{Giovanni Grigoletto} & 2021-01-10 & \includegraphics[scale=0.20]{./src/Organigramma/immagini/firme/giovanni.png}\\
+		{Prof. Tullio Vardanega} &  &   \\
+		{Prof. Riccardo Cardin} &  &   \\
 	\end{longtable}
 }
 
@@ -33,13 +34,13 @@
 		\caption{Tabella di accettazione dei componenti}\\
 		\rowcolor{\primaryColor}
 		\textcolor{\secondaryColor}{\textbf{Nome}} & \textcolor{\secondaryColor}{\textbf{Data di Accettazione}} & \textcolor{\secondaryColor}{\textbf{Firma}}\\	\endhead
-		{Elvis Murtezan} & 2021-01-11 & \includegraphics[scale=0.20]{./src/Organigramma/immagini/firme/Elvis.png}\\
-		{Giovanni Grigoletto} & 2021-01-11 & \includegraphics[scale=0.20]{./src/Organigramma/immagini/firme/giovanni.png}\\
-		{Andrea De Tomasi} & 2021-01-11 & \includegraphics[scale=0.20]{./src/Organigramma/immagini/firme/andrea.png}\\
-		{Alessio Trevisan} & 2021-01-11 & \includegraphics[scale=0.20]{./src/Organigramma/immagini/firme/alessio.png}\\
-		{Abdelwahad Kandoul} & 2021-01-11 & \includegraphics[scale=0.20]{./src/Organigramma/immagini/firme/abdel.png}\\
-		{Filippo Pinton} & 2021-01-11 & \includegraphics[scale=0.20]{./src/Organigramma/immagini/firme/filippo.png}\\
-		{Edoardo Caregnato} & 2021-01-11 & \includegraphics[scale=0.20]{./src/Organigramma/immagini/firme/edoardo.png}
+		{Elvis Murtezan} & 2021-01-05 & \includegraphics[scale=0.20]{./src/Organigramma/immagini/firme/Elvis.png}\\
+		{Giovanni Grigoletto} & 2021-01-05 & \includegraphics[scale=0.20]{./src/Organigramma/immagini/firme/giovanni.png}\\
+		{Andrea De Tomasi} & 2021-01-05 & \includegraphics[scale=0.20]{./src/Organigramma/immagini/firme/andrea.png}\\
+		{Alessio Trevisan} & 2021-01-05 & \includegraphics[scale=0.20]{./src/Organigramma/immagini/firme/alessio.png}\\
+		{Abdelwahad Kandoul} & 2021-01-05 & \includegraphics[scale=0.20]{./src/Organigramma/immagini/firme/abdel.png}\\
+		{Filippo Pinton} & 2021-01-05 & \includegraphics[scale=0.20]{./src/Organigramma/immagini/firme/filippo.png}\\
+		{Edoardo Caregnato} & 2021-01-05 & \includegraphics[scale=0.20]{./src/Organigramma/immagini/firme/edoardo.png}
 	\end{longtable}
 }
 
