--- a/DocumentiEsterni/PianoDiProgetto/src/RegistroModifiche.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/RegistroModifiche.tex
@@ -28,7 +28,7 @@
         0.1.0  & 
         2021-01-05 & 
         Verifica & 
-        Abdelwahad Kandoul, Edoradro Caregato  & 
+        Abdelwahad Kandoul, Edoardo Caregnato  & 
         \verificatore{} \\
 
         0.0.8  & 
