sistemato tabella gulpeace

--- a/DocumentiEsterni/PianoDiQualifica/src/ResocontoVerifica/src/Esiti_verifiche_automatizzate.tex
+++ b/DocumentiEsterni/PianoDiQualifica/src/ResocontoVerifica/src/Esiti_verifiche_automatizzate.tex
@@ -9,14 +9,16 @@ i documenti prodotti finora.
     \textcolor{\secondaryColor}{
     \centering\textbf{Documento}}     & \textcolor{\secondaryColor}{\centering\textbf{Indice Gulpease}}    & \textcolor{\secondaryColor}
     {\centering\textbf{Esito}} \\
-    \textit{Analisi dei Requisiti v1.0.0}                & Testo esempio                                    & Superato{} \\
-    \textit{Glossario v1.0.0}                & Testo esempio                                    & Superato{} \\
-    \textit{Norme di Progetto v1.0.0}               & Testo esempio                                    & Superato{} \\
-    \textit{Piano di Progetto v1.0.0}                & Testo esempio                                    & Superato{} \\
-    \textit{Piano di Qualifica v1.0.0}                & Testo esempio                                    & Superato{} \\
-    \textit{Studio di Fattibilità v1.0.0}                & Testo esempio                                    & Superato{} \\
-    \textit{Verbale Interno DATA v1.0.0}                & Testo esempio                                    & Superato{} \\
-    \textit{Verbale Esterno DATA v1.0.0}                & Testo esempio                                    & Superato{} \\
+    \textit{Analisi dei Requisiti v1.0.0}           & 62                                    & Superato{} \\
+    \textit{Glossario v1.0.0}                       & 72                                    & Superato{} \\
+    \textit{Norme di Progetto v1.0.0}               & 68                                   & Superato{} \\
+    \textit{Piano di Progetto v1.0.0}                & 64                                    & Superato{} \\
+    \textit{Piano di Qualifica v1.0.0}                & 59                                    & Superato{} \\
+    \textit{Studio di Fattibilità v1.0.0}               & 69                                    & Superato{} \\
+    \textit{Verbale Interno 2020-12-11 v1.0.0}          & 73                                    & Superato{} \\
+    \textit{Verbale Interno 2020-12-22 v1.0.0}          & 71                                    & Superato{} \\
+    \textit{Verbale Interno 2021-01-05 v1.0.0}          & 74                                    & Superato{} \\
+    \textit{Verbale Esterno 2020-12-18 v1.0.0}          & 77                                    & Superato{} \\
 \end{longtable}
 \end{table}
 
