--- a/DocumentiEsterni/PianoDiProgetto/src/ConsuntivoPeriodo/src/ConsuntivoAnalisi.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/ConsuntivoPeriodo/src/ConsuntivoAnalisi.tex
@@ -19,10 +19,10 @@ La seguente tabella illustra la differenza oraria ed economica rilevata a poster
 	
 Responsabile    &  35 & 0 & 1050 & 1050 &  0 \\
 Amministratore  &  35 & 0 & 700 & 700 & 0 \\
-Analista        & 71 & 4 & 1775 & 1425 & 350 \\
+Analista        & 71 & 4 & 1775 & 1675 & 100 \\
 Progettista     &   0 &   0 &    0 &  0 & 0 \\
 Programmatore   &   0 &   0 &    0 &  0 & 0 \\
-Verificatore    &  70 &  5 & 900 &  & 75 \\
+Verificatore    &  70 &  5 & 900 &  & 		75 \\
 \textbf{Totale} & 211 & 202 & 4575 & 4400 & 175 \\	
 
 \end{longtable}
@@ -31,18 +31,18 @@ Verificatore    &  70 &  5 & 900 &  & 75 \\
 \subsubsection{Conclusioni}
 Come riportato dalla tabella, il bilancio risulta essere positivo per i seguenti motivi:
 \begin{itemize}
-	\item \textbf{Responsabile}: {i componenti designati a questo ruolo in questa fase a fare i responsabili non avevano esperienza è quindi le ore preventivate hanno tenuto conto di questo; }
+	\item \textbf{Responsabile}: {i componenti designati a questo ruolo per questa fase non avevano esperienza è quindi le ore preventivate hanno tenuto conto di questo; }
 	\item \textbf{Amministratore}: {uno dei componenti del gruppo aveva già esperienza in merito a vari strumenti e tecnologie utilizzabili per migliorare la produttività del gruppo,ma è stato tenuto 
-	conto del inesperienza di alcuni componenti del team in questo ruolo;}
+	conto del inesperienza di alcuni componenti del team che hanno avuto tale responsabilità;}
 	\item \textbf{Analista}: {è in linea col preventivo}
-	\item \textbf{Verificatore}: {lo scostamento è in linea con il preventivo all'incirca come quelle dell'analista che sono molto legate tra di loro in questa fase.}
+	\item \textbf{Verificatore}: {lo scostamento è in linea con il preventivo all'incirca come quelle dell'analista che sono molto legate tra di loro nella fase di analisi.}
 \end{itemize}
 
 \subsubsection{Ragionamento sugli scostamenti}
-La suddivisione a stadi di una fase permette di migliorare la produttività del team, visto che viene effettuato un check intermedio alla fine di uno stadio:
+La suddivisione a stadi di una fase permette di migliorare la produttività del team, visto che viene effettuato un check intermedio sostanziale alla fine di uno stadio:
 \begin{itemize}
 	\item Dai \textbf{verificatori}, che validano i deliverables relativi a quello stadio;
-	\item E dal \textbf{responsabile}, che verifica la presenza di eventuali problematiche.
+	\item E dal \textbf{responsabile}, che verifica la presenza di eventuali problematiche e si attiva nel risolverle.
 \end{itemize}
 Questo fa presupporre che anche i futuri scostamenti siano abbastanza in linea con quello preventivato.
 \subsubsection{Preventivo a finire}
