Fix verbale Elvis + modifica .sty con inserimento informazioni

--- a/Shared/Sweleven.sty
+++ b/Shared/Sweleven.sty
@@ -110,7 +110,7 @@
 \newcommand{\PdP}{\emph{Piano di progetto}}
 \newcommand{\PdQ}{\emph{Piano di qualifica}}
 \newcommand{\SP}{\emph{Specifica tecnica}}
-\newcommand{\DdP}{\emph{Definizion di prodotto}}
+\newcommand{\DdP}{\emph{Definizione di prodotto}}
 \newcommand{\G}{\emph{Glossario}}
 \newcommand{\MU}{\emph{Manuale utente}}
 \newcommand{\MS}{\emph{Manuale sviluppatore}}
@@ -124,8 +124,8 @@
 
 % variabili - altro
 
-\newcommand{\Mail}{TODO}
-\newcommand{\proponente}{TODO}
+\newcommand{\Mail}{imolinfo@imolainformatica.it}
+\newcommand{\proponente}{Imola Informatica}
 \newcommand{\committenti}{Tullio Vardanega e Riccardo Cardin}
 
 \newcommand{\RR}{Revisione dei Requisiti}
@@ -133,7 +133,7 @@
 \newcommand{\RQ}{Revisione di Qualifica}
 \newcommand{\RA}{Revisione di Accettazione}
 
-\newcommand{\NomeProgetto}{TODO}
+\newcommand{\NomeProgetto}{BlockCovid}
 
 \newcommand{\glo}[1]{\textit{#1}\ped{G}}
 
