--- a/DocumentiInterni/Verbali/verbale 5-1-21/src/Comandi.tex
+++ b/DocumentiInterni/Verbali/verbale 5-1-21/src/Comandi.tex
@@ -1,15 +1,15 @@
-\newcommand{\Titolo}{Verbale interno del DATA}
+\newcommand{\Titolo}{Verbale interno del 05-01-2021}
 
 \newcommand{\Approvatore}{}
-\newcommand{\Redattori}{}
-\newcommand{\Verificatori}{}
+\newcommand{\Redattori}{Elvis Murtezan}
+\newcommand{\Verificatori}{Edoardo Caregnato}
 
 \newcommand{\pathimg}{../../../Shared/logo.png}
 
-\newcommand{\Versionedoc}{X.X.X}
+\newcommand{\Versionedoc}{1.5.0}
 
 \newcommand{\Distribuzione}{Prof. Tullio Vardanega \newline Prof. Riccardo Cardin \newline Sweleven}
 
 \newcommand{\Uso}{Interno}
 
-\newcommand{\DescrizioneDoc}{Riassunto dell'incontro del gruppo \textit{Sweleven} con \textit{XXX} tenutosi il DATA.}
+\newcommand{\DescrizioneDoc}{Riassunto dell'incontro del gruppo \textit{Sweleven} tenutosi il giorno 05-01-2021}
