--- a/DocumentiInterni/Verbali/verbale 5-1-21/src/Informazioni/src/InformazioniIncontro/main.tex
+++ b/DocumentiInterni/Verbali/verbale 5-1-21/src/Informazioni/src/InformazioniIncontro/main.tex
@@ -1,8 +1,8 @@
 \begin{itemize}
     \item \textbf{Luogo}: Videochiamata tramite Discord
     \item \textbf{Data}: 2021-01-05
-    \item \textbf{Ora di inizio}: ORA INIZIO 16:05
-    \item \textbf{Ora di fine}: ORA FINE 17:10
+    \item \textbf{Ora di inizio}: 16:05
+    \item \textbf{Ora di fine}: 17:10
     \item \textbf{Presenze}:
           \begin{itemize}
             \item Abdelwahad Kandoul
