--- a/DocumentiInterni/Verbali/verbale 5-1-21/src/RegistroModifiche.tex
+++ b/DocumentiInterni/Verbali/verbale 5-1-21/src/RegistroModifiche.tex
@@ -9,12 +9,12 @@
         {\textbf{Descrizione}} & \textcolor{\secondaryColor}{\textbf{Nominativo}} & \textcolor{\secondaryColor}{\textbf{Ruolo}}                          \\
 
         % usare \verificatore per indicare verificatore
-        % usare \redattore per indicare redatore
+        % usare \redattore per indicare redattore
         % usare \responsabile per indicare responsabile
 
         %		L'ultimo evento deve essere sempre all'inizio della tabella
-        X.X.X                  & XXXX-XX-XX                                       & Responsabile                                & TODO & \responsabile{} \\
-        X.X.X                  & XXXX-XX-XX                                       & Verifica                                    & TODO & \verificatore{} \\
-        X.X.X                  & XXXX-XX-XX                                       & Descrizione edit                            & TODO & \redattore{}    \\
+        1.5.0                  & 2021-01-08                                       & Responsabile                                & Edoardo Caregnato & \responsabile{} \\
+        1.5.0                  & 2021-01-08                                       & Verifica                                    & Edoardo Caregnato & \verificatore{} \\
+        1.0.0                  & 2021-01-06                                       & Descrizione                            & Elvis Murtezan & \redattore{}    \\
     \end{longtable}
 }
