--- a/DocumentiInterni/Verbali/verbale 5-1-21/src/TracciamentoDecisioni/main.tex
+++ b/DocumentiInterni/Verbali/verbale 5-1-21/src/TracciamentoDecisioni/main.tex
@@ -1,4 +1,4 @@
 \begin{enumerate}
-    \item Contattare azienda per HW RFID (Aledss);
-    \item Finire validazione deliverables mancanti entro la data: 8/1/2021;
+    \item contattare azienda per un eventuale prestito di hardware RFID;
+    \item finire validazione deliverables mancanti entro la data: 8/1/2021.
 \end{enumerate}
