--- a/DocumentiInterni/StudioDiFattibilita/src/Introduzione/main.tex
+++ b/DocumentiInterni/StudioDiFattibilita/src/Introduzione/main.tex
@@ -1,13 +1,13 @@
 \subsection{Scopo del Documento}
 Questo documento contiene la stesura dello studio di fattibilità riguardante i sette capitolati proposti, dove per ciascuno di essi vengono evidenziati i seguenti aspetti:
 \begin{itemize}
-    \item Informazioni generali;
-    \item Descrizione del capitolato;
-    \item Prerequisiti;
-    \item Tecnologie coinvolte;
-    \item Vincoli;
-    \item Aspetti positivi;
-    \item Aspetti critici.
+    \item informazioni generali;
+    \item descrizione del capitolato;
+    \item prerequisiti;
+    \item tecnologie coinvolte;
+    \item vincoli;
+    \item aspetti positivi;
+    \item aspetti critici.
 \end{itemize}
 Infine, per ogni capitolato vengono esposte le motivazioni e le ragioni per cui il gruppo ha scelto come progetto il capitolato C1 \NomeProgetto{}, in particolare l’interesse del gruppo a tale capitolato è stato cruciale nella decisone finale.
 \subsection{Glossario}
