--- a/DocumentiInterni/StudioDiFattibilita/src/Comandi.tex
+++ b/DocumentiInterni/StudioDiFattibilita/src/Comandi.tex
@@ -1,6 +1,6 @@
 \newcommand{\Titolo}{Studio di Fattibilit\`{a}}
 
-\newcommand{\Approvatore}{TODO}
+\newcommand{\Approvatore}{Elvis Murtezan}
 \newcommand{\Redattori}{\newline Abdelwahad Kandoul \newline Andrea De Tomasi \newline Giovanni Grigoletto
                         \newline Elvis Murtezan}
 \newcommand{\Verificatori}{Alessio Trevisan \newline Filippo Pinton \newline Edoardo Caregnato}
@@ -8,13 +8,13 @@
 
 \newcommand{\pathimg}{../../Shared/logo.png}
 
-\newcommand{\Versionedoc}{0.0.5}
+\newcommand{\Versionedoc}{1.0.0}
 
 \newcommand{\Distribuzione}{Prof. Tullio Vardanega  \newline Prof. Riccardo Cardin  \newline Sweleven}
 
 \newcommand{\Uso}{Interno}
 
-\newcommand{\DescrizioneDoc}{TODO}
+\newcommand{\DescrizioneDoc}{Questo documento ha lo scopo di presentare le analisi svolte sui capitolati d'appalto disponibili}
 
 \newcommand{\NdPv}{Norme di Progetto \Versionedoc}
 \newcommand{\Glossariov}{Glossario \Versionedoc}
