--- a/DocumentiInterni/StudioDiFattibilita/src/RegistroModifiche.tex
+++ b/DocumentiInterni/StudioDiFattibilita/src/RegistroModifiche.tex
@@ -13,6 +13,10 @@
         % usare \responsabile per indicare responsabile
 
         %		L'ultimo evento deve essere sempre all'inizio della tabella
+        1.0.0   &2021-01-02 &Approvaziove &Elvis Murtezan &\responsabile{}\\
+        0.3.0                  &2020-12-27                                      & Verifica                          &Edoardo Caregnato &\verificatore{}\\
+        0.2.0                  &2020-12-16                                      & Verifica                          &Filippo Pinton &\verificatore{}\\
+        0.1.0                  &2020-12-15                                      & Verifica                          &Alessio Trevisan &\verificatore{}\\
 		0.0.4                  & 2020-12-11                                       & stesura C2 e C7                     & Abdelwahad Kandoul & \redattore{}    \\
         0.0.3                  & 2020-12-11                                       & stesura C3 e C5    					& Andrea De Tomasi & \redattore{}    \\
         0.0.2                  & 2020-12-11                                       & stesura C1 e C4   					& Giovanni Grigoletto& \redattore{} \\        
