--- a/Shared/Sweleven.sty
+++ b/Shared/Sweleven.sty
@@ -133,7 +133,7 @@
 \newcommand{\RQ}{Revisione di Qualifica}
 \newcommand{\RA}{Revisione di Accettazione}
 
-\newcommand{\NomeProgetto}{TODO}
+\newcommand{\NomeProgetto}{BlockCOVID}
 
 \newcommand{\glo}[1]{\textit{#1}\ped{G}}
 
