minor fix verbale

--- a/DocumentiInterni/Verbali/verbale-18-12-2020/src/Comandi.tex
+++ b/DocumentiInterni/Verbali/verbale-18-12-2020/src/Comandi.tex
@@ -1,7 +1,7 @@
 \newcommand{\Titolo}{Verbale interno del 18-12-2020}
 
 \newcommand{\Approvatore}{}
-\newcommand{\Redattori}{}
+\newcommand{\Redattori}{Edoardo Caregnato}
 \newcommand{\Verificatori}{}
 
 \newcommand{\pathimg}{../../../Shared/logo.png}
@@ -12,4 +12,4 @@
 
 \newcommand{\Uso}{Interno}
 
-\newcommand{\DescrizioneDoc}{Riassunto dell'incontro del gruppo \textit{Sweleven} con \textit{Imola Informatica} tenutosi in data 18-12-2020.}
+\newcommand{\DescrizioneDoc}{Riassunto dell'incontro del gruppo \textit{Sweleven} con tenutosi in data 18-12-2020.}
