--- a/DocumentiInterni/Verbali/verbale-18-12-2020/src/Informazioni/src/InformazioniIncontro/main.tex
+++ b/DocumentiInterni/Verbali/verbale-18-12-2020/src/Informazioni/src/InformazioniIncontro/main.tex
@@ -1,5 +1,5 @@
 \begin{itemize}
-    \item \textbf{Luogo}: Piattaforma Zoom
+    \item \textbf{Luogo}: piattaforma Zoom
     \item \textbf{Data}: 18-12-2020
     \item \textbf{Ora di inizio}: 16:00
     \item \textbf{Ora di fine}: 17:15
