--- a/DocumentiInterni/StudioDiFattibilita/src/C1/main.tex
+++ b/DocumentiInterni/StudioDiFattibilita/src/C1/main.tex
@@ -11,7 +11,7 @@ Nel contesto della continua diffusione della pandemia di COVID-19, l'obiettivo d
 \item competenza nella programmazione e strutturazione di applicazioni server-side;
 \item competenza nella costruzione e configurazione di comunicazioni di rete;
 \item conoscenza adeguata delle tecnologie e librerie proposte;
-\item conoscenza riguardo il funzionamento di strumenti di riconoscimento fisico, quali \glo{RFID};
+\item conoscenza riguardo il funzionamento di strumenti di riconoscimento fisico, quali \glo{RFID}.
 \end{itemize}
 
 \subsection{Tecnologie coinvolte}
@@ -44,7 +44,7 @@ Nel contesto della continua diffusione della pandemia di COVID-19, l'obiettivo d
 \item prenotare una postazione;
 \item segnalare la propria presenza in tempo reale (nella postazione, appoggiando il telefono sul tag \glo{RFID}), così come la pulizia di una postazione o dell'intera stanza;
 \item ricevere  un  elenco  delle  stanze  che  necessitano l’igienizzazione;
-\item recuperare uno storico delle postazioni occupate e igienizzate;
+\item recuperare uno storico delle postazioni occupate e igienizzate.
 \end{itemize}
 \item le autorizzazioni di accesso si devono distinguere in due macro-tipologie di soggetti: Amministratore di sistema e Utente;
 \item poichè il lettore \glo{RFID} consuma molta batteria al dispositivo è richiesto di trovare il tempo sufficiente a garantire il giusto bilanciamento tra consumo batteria e scansioni, il tutto con test e report delle scelte fatte;
@@ -68,7 +68,7 @@ L’azienda proponente valuta inoltre positivamente i seguenti requisiti opziona
 \item l'azienda è stata piuttosto chiara e precisa sugli obiettivi ed i vincoli del progetto;
 \item il proponente offre consulenza e supporto tecnico per la realizzazione;
 \item il contrasto della diffusione della pandemia è un tema d'importanza rilevante in questo periodo;
-\item molti membri del gruppo si sono dimostrati incuriositi da questo capitolato;
+\item molti membri del gruppo si sono dimostrati incuriositi da questo capitolato.
 
 \end{itemize}
 
@@ -76,7 +76,7 @@ L’azienda proponente valuta inoltre positivamente i seguenti requisiti opziona
 \begin{itemize}
 \item seppur accattivanti le tecnologie coinvolte sono molte ed anche relativamente recenti e complesse: richiedono tempo per lo studio ed apprendimento;
 \item il grado di sfida proposto è discretamente alto;
-\item il capitolato ha suscitato l'interesse di molti gruppi partecipanti, potrebbe quindi essere difficile aggiudicarsi l'appalto;
+\item il capitolato ha suscitato l'interesse di molti gruppi partecipanti, potrebbe quindi essere difficile aggiudicarsi l'appalto.
 \end{itemize}
 
 \subsection{Conclusioni}
